# image2eink

./: .clang-format  .gitignore  LICENSE  README.md  main.c  meson.build
include/: i2e_bin_write.h  i2e_config.h  i2e_image_handler.h  i2e_image_write.h  i2e_options.h  i2e_pallette.h  i2e_utils.h  stb_import.h
src/: i2e_bin_write.c  i2e_config.c  i2e_image_handler.c  i2e_image_write.c  i2e_pallette.c  i2e_utils.c
